# record_rosbag_oncall

./: CMakeLists.txt  package.xml
bagfiles/: 185501-20190412.bag.active  robike_status0.bag  robike_status1.bag  robike_status2.bag  robike_status3.bag  robike_status4.bag
msgs/: RecordDemand.msg
scripts/: my_rosbag_recorder.py  test.bag  test2.bag  test3.bag  test4.bag
